--- a/css/slick.css
+++ b/css/slick.css
@@ -119,7 +119,7 @@
 }
 .slick-dots {
     list-style: none;
-    padding: 40px 0 0 0;
+    padding: 20px 0 0 0;
     margin: 0;
     text-align: center;
 }
@@ -134,9 +134,10 @@
     position: relative;
     padding: 0;
     margin: 0;
-    width: 10px;
-    height: 10px;
-    background: #D4D4D4;
+    width: 12px;
+    height: 12px;
+    background: #fff;
+    border: 1px solid #378B03;
     cursor: pointer;
     overflow: hidden;
     border-radius: 50%;
@@ -146,49 +147,33 @@
     outline: none;
 }
 .slick-dots .slick-active button {
-    background: #9D2933;
+    background: #378B03;
 }
 .slick-arrow {    
     position: absolute;
-    top: 50%;
-    margin-top: -50px;
     padding: 0;
-    width: 48px;
-    height: 48px;
+    width: 24px;
+    top: 50%;
+    margin-top: -16px;
+    height: 32px;
     cursor: pointer;
     overflow: hidden;
-    border-radius: 50%;
-    background: #F1F1F1;
-    line-height: 48px;
+    line-height: 32px;
     text-align: center;
-    color: #58717B;
+    color: #2B302D;
+    border: none;
     outline: none;
-    border: 1px solid rgba(0, 0, 0, 0.08);
+    font-size: 24px;
+    background: none;
 }
 .slick-arrow:focus {
     outline: none;
 }
-.slick-arrow:hover {
-    background-color: #ffffff;
-}
 .slick-arrow.slick-prev {
-    left: -75px;
+    left: 0;
 }
 .slick-arrow.slick-next {
-    right: -75px;
-}
-.section-gray .slick-arrow  {
-    background: #ffffff;
-}
-
-.slick-arrow.square-shape {
-    top: 0;
-    margin: 0;
-    width: 30px;
-    height: 30px;
-    border-radius: 0;
-    font-size: 14px;
-    line-height: 30px;
+    right: 0;
 }
 .slick-arrow.square-shape.slick-prev {
     left: 0;
@@ -197,37 +182,5 @@
     right: 0;
 }
 @media (max-width: 992px) {
-    .slick-arrow {          
-        margin-top: 0;
-        top: auto;
-        width: 36px;
-        height: 36px;
-        background: #F1F1F1;
-        line-height: 36px;
-        bottom: -50px;
-    }
-    .slick-arrow.slick-prev {
-        left: 50%;
-        margin-left: -45px;
-    }
-    .slick-arrow.slick-next {
-        right: 50%;
-        margin-right: -45px;
-    }
-
-    .slick-arrow.square-shape {
-        top: 0;
-        margin: 0;
-        width: 30px;
-        height: 30px;
-        border-radius: 0;
-        line-height: 30px;
-        z-index: 5;
-    }
-    .slick-arrow.square-shape.slick-prev {
-        left: 0;
-    }
-    .slick-arrow.square-shape.slick-next {
-        right: 0;
-    }
+    
 }
