--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3120,9 +3120,10 @@ fieldset:disabled a.btn {
 
 .btn-lg, .btn-group-lg > .btn {
   padding: 0.5rem 1rem;
-  font-size: 1.25rem;
+  font-size: 20px;
   line-height: 1.5;
   border-radius: 0.3rem;
+  height: 58px;
 }
 
 .btn-sm, .btn-group-sm > .btn {
