--- a/css/slick.css
+++ b/css/slick.css
@@ -149,6 +149,13 @@
 .slick-dots .slick-active button {
     background: #378B03;
 }
+.causerr-slider-outer .slick-dots button {
+    background: transparent;
+    border: 1px solid #fff;
+}
+.causerr-slider-outer .slick-dots .slick-active button {
+    background: #fff;
+}
 .slick-arrow {    
     position: absolute;
     padding: 0;
@@ -180,6 +187,15 @@
 }
 .slick-arrow.square-shape.slick-next {
     right: 0;
+}
+.white-away {
+    color: #fff;
+}
+.slick-prev.white-away {
+    left: -100px;
+}
+.slick-next.white-away {
+    right: -100px;;
 }
 @media (max-width: 992px) {
     
