--- a/css/responsive.css
+++ b/css/responsive.css
@@ -102,6 +102,19 @@
         background: #fff;
         z-index: 10;
     }
+
+    .admin-outer {
+        padding: 20px;
+    }
+    .left-panel-menu {
+        float: none;
+        width: auto;
+        margin-bottom: 30px;
+    }
+    .data-table-right {
+        float: none;
+        width: auto;
+    }
 }
 
 @media (min-width: 768px) {
@@ -248,12 +261,4 @@
         margin-left: 5px;
         margin-right: 5px;
     }
-}
-
-@media (max-width: 480px) {
-	
-}
-
-@media (min-width: 768px) and (max-width: 979px) {
-	
 }
